# simplise-api-client-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: coding.instructions.md  test-coding.instructions.md
examples/: action_bool_example.py
src/simplise_api_client/: __init__.py  action.py  base.py  models.py  type.py
src/simplise_api_client/actions/: __init__.py  decimal.py  utils.py
src/simplise_api_client/actions/array/: __init__.py
src/simplise_api_client/actions/communication/: __init__.py
src/simplise_api_client/actions/content/: __init__.py
src/simplise_api_client/actions/data/: __init__.py  bool.py  input.py  num.py
src/simplise_api_client/actions/logic/: __init__.py  add.py
src/simplise_api_client/actions/numeric/: __init__.py  decimal.py
src/simplise_api_client/actions/state/: __init__.py
src/simplise_api_client_python/: __init__.py  action.py  base.py  type.py
src/simplise_client/: __init__.py  action_client.py  actions.py  auth_client.py  http_client.py  main_client.py  types.py
tests/: README.md  __init__.py  check_actions.py  check_ts_convert.py  conftest.py  test_actions.py  test_api.py  test_base.py  test_models.py
tests/actions/: __init__.py
tests/actions/data/: README.md  __init__.py  test_bool.py  test_bool_integration_mock.py  test_bool_integration_real.py
tests/actions/logic/: __init__.py  test_add.py
tests/actions/numeric/: __init__.py  test_decimal.py
tests/test_simplise_api/: __init__.py  base.py  config.py  conftest.py  test.py  test_simplise_api.py  test_simplise_api_lib.py
