[project]
name = "simplise-api-client-python"
version = "0.0.3a1"
description = "Simplise API Client for Python"
readme = "README.md"
authors = [
    { name = "Yuki Kimoto", email = "developer@simplise.jp" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
