[project]
name = "simplise-api-client-python"
version = "0.0.3a1"
description = "Simplise API Client for Python"
readme = "README.md"
authors = [
    { name = "Yuki Kimoto", email = "developer@simplise.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "D203",
    "D213",
    "D400",
    "D415",
    "TD001",
    "TD002",
    "TD003",
    "PD011",
    "ERA001",
    "RUF001",
    "RUF002",
    "RUF003",
    "COM812",
    "DTZ005",
    "BLE001",
    "FIX002",
]
unfixable = [
    "F401",
    "F841",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "D",
    "S101",
    "N802",
    "ARG",
]

[tool.ruff.lint.pylint]
max-args = 6


[tool.pyright]
include = [
    "src"
]
exclude = [
    "**/node_modules",
    "**/dist",
    "**/+__pycache__",
    "src/experimental",
    "src/typestubs"
]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "aiohttp>=3.12.14",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-httpx>=0.35.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.5",
]
